Remove lsif dump endpoints from lsif-server.
